--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,7 +51,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
                             <li><a class="dropdown-item" href="/manager/category">카테고리 및 상품 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/order">주문 관리</a></li>
-                            <li><a class="dropdown-item" href="#">업로드 파일 관리</a></li>
+                            <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
                         </ul>
                     </li>
                 </th:block>
