--- a/src/main/resources/templates/manage/user.html
+++ b/src/main/resources/templates/manage/user.html
@@ -30,6 +30,8 @@
                         <th style="width: 5%;" class="text-center" rowspan="2">번호</th>
                         <th style="width: 10%" class="text-center" rowspan="2">사용자ID</th>
                         <th style="width: 10%" class="text-center" rowspan="2">ROLE</th>
+                        <th style="width: 10%" class="text-center" rowspan="2">이름</th>
+                        <th style="width: 10%" class="text-center" rowspan="2">이메일</th>
                         <th style="width: 10%" class="text-center" COLSPAN="3">주소</th>
                         <th style="width: 10%" class="text-center" rowspan="2">ROLE 변경</th>
                     </tr>
@@ -51,6 +53,8 @@
                             <td th:text="${userStat.index + 1}" style="width: 5%; text-align: center;"></td>
                             <td th:text="${user.userId}" style="width: 10%; text-align: center;"></td>
                             <td th:text="${user.role}" style="width: 10%; text-align: center;"></td>
+                            <td th:text="${user.userName}" style="width: 10%; text-align: center;"></td>
+                            <td th:text="${user.userEmail}" style="width: 20%; text-align: center;"></td>
                             <td th:text="${user.city}" style="width: 10%; text-align: center;"></td>
                             <td th:text="${user.street}" style="width: 20%; text-align: center"></td>
                             <td th:text="${user.zipcode}" style="width: 10%; text-align: center"></td>
