--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -22,8 +22,8 @@
                     <div class="input-group">
                         <input type="password" class="form-control" id="newPassword" name="password" disabled/>
                         <button class="btn btn-outline-dark" type="button" id="change-pwd">비밀번호 변경</button>
+                        <div class="invalid-feedback">비밀번호를 입력하세요.</div>
                     </div>
-                    <div class="invalid-feedback">비밀번호를 입력하세요.</div>
                 </div>
 
                 <div class="mb-3 mt-3">
@@ -40,8 +40,13 @@
 
                 <div class="mb-3 mt-3">
                     <label for="userEmail">이메일</label>
-                    <input type="text" class="form-control" id="userEmail" name="userEmail" th:value="${user.userEmail}" required/>
-                    <div class="invalid-feedback">이메일을 입력하세요.</div>
+                    <div class="input-group">
+                        <input type="hidden" id="originUserEmail" th:value="${user.userEmail}" />
+                        <input type="email" class="form-control" id="userEmail" name="userEmail" th:value="${user.userEmail}" disabled required/>
+                        <button class="btn btn-outline-dark" type="button" id="check-Email">이메일 변경</button>
+                        <div class="invalid-feedback">이메일을 입력하세요.</div>
+                    </div>
+                    <p class="error-message" id="EmailChkMessage"></p>
                 </div>
 
                 <div class="mb-3 mt-3">
@@ -92,6 +97,8 @@
     <script>
 
         let changePwd = false
+        let changeEmail = false
+        let emailChk = true
         const newPassword = $("#newPassword")
         const newPasswordChk = $("#newPasswordChk")
 
@@ -109,6 +116,54 @@
                 else newPasswordChk.addClass('is-invalid')
             }
         }
+
+        /* 이메일 중복 확인 */
+        $("#check-Email").on("click", function(e){
+            e.preventDefault();
+
+            if(!changeEmail) {
+
+                changeEmail = true
+                emailChk = false
+                $("#userEmail").prop('disabled', false)
+                $("#check-Email").text("중복확인")
+
+            }else if(changeEmail) {
+                const userEmail = $("#userEmail").val()
+                const originUserEmail = $("#originUserEmail").val()
+
+                if(userEmail === originUserEmail) {
+                    const result = confirm('기존 이메일과 동일합니다. 그대로 사용하시겠습니까?')
+                    if (result)  {
+                        $("#EmailChkMessage").html('')
+                        $("#userEmail").prop('disabled', true)
+                        $("#check-Email").prop('disabled', true)
+                        emailChk = true
+                    }
+                }else {
+                    // check duplicate email
+                    $.ajax({
+                        type: 'GET',
+                        url: `/api/checkEmail?userEmail=${userEmail}`,
+                        dataType: 'json',
+                        success: function (data) {
+                            if (!data.message) $("#EmailChkMessage").css('color', 'red').html("중복되는 이메일입니다.")
+                            else {
+                                $("#EmailChkMessage").css('color', 'green').html("사용 가능한 이메일입니다.")
+                                $("#userEmail").prop('disabled', true)
+                                $("#check-Email").prop('disabled', true)
+                                emailChk = true
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            console.error('Error getting password:', error);
+                        }
+                    });
+                }
+            }
+        })
+
+
 
         $("#change-pwd").on("click", function(e) {
             e.preventDefault();
@@ -131,9 +186,10 @@
                     const pwdChk = newPasswordChk.val()
 
                     if(changePwd &&(pwd.length === 0 || pwd !== pwdChk)) alert("입력하신 비밀번호가 다릅니다.")
+                    else if(changeEmail && !emailChk) alert("이메일 중복을 확인해주세요.")
                     else {
                         FormDataToObj.getParameter("update-form").then(obj => {
-
+                            if(changeEmail) obj['userEmail'] = $("#userEmail").val()
                             $.ajax({
                               type: 'PUT',
                               url: `/api/user`,
