--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,14 +31,20 @@
                     </div>
 
                     <div class="form-check mb-3">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" name="remember" id="remember"> Remember me
-                        </label>
+                        <div class="card-text d-flex justify-content-between">
+                            <div class="text-start">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" type="checkbox" name="remember" id="remember"> Remember me
+                                </label>
+                            </div>
+                            <div class="text-end">
+                                <a id="find-user-password" href="#">아이디/비번 찾기</a>
+                            </div>
+                        </div>
                     </div>
 
                     <button type="submit" class="btn btn-primary">로그인</button>
                     <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#myModal">회원가입</button>
-                    <button type="button" class="btn btn-info" id="find-user-password">비밀번호찾기</button>
                 </div>
             </form>
             <!-- end : Login Form  -->
@@ -186,6 +192,7 @@
 
         $("#find-user-password").on("click", function(e){
             console.log("find-user-password clicked")
+            window.location.href = '/front/initialPassword'
         })
 
         $("#check-Email").click(() => {
@@ -196,7 +203,7 @@
             else {
                 $.ajax({
                     type: 'GET',
-                    url: `/api/checkEmail?userEmail=${newUserEmail}`,
+                    url: `/front/api/checkEmail?userEmail=${newUserEmail}`,
                     dataType: 'json',
                     success: function (data) {
                         if (!data.message) $("#EmailChkMessage").css('color', 'red').html("중복되는 이메일입니다.")
@@ -217,7 +224,9 @@
         $("#show-pwd").click(() => {
             const passwordInput = $('#password');
             const type = passwordInput.attr('type') === 'password' ? 'text' : 'password';
+            const text = passwordInput.attr('type') === 'password' ? 'hide' : 'show';
             passwordInput.attr('type', type);
+            $("#show-pwd").text(text)
         })
 
         $("#check-Id").click(() => {
@@ -227,7 +236,7 @@
             else {
                 $.ajax({
                     type: 'GET',
-                    url: `/api/checkId?userId=${newUserId}`,
+                    url: `/front/api/checkId?userId=${newUserId}`,
                     dataType: 'json',
                     success: function (data) {
                         if (!data.message) $("#IdChkMessage").css('color', 'red').html("중복되는 아이디입니다.")
@@ -266,7 +275,7 @@
 
                             $.ajax({
                                 type: 'POST',
-                                url: `/api/user`,
+                                url: `/front/api/user`,
                                 dataType: 'json',
                                 data: JSON.stringify(obj),
                                 contentType: 'application/json',
