commit 81 : 파일 다운로드/업로드 기록 조회 화면 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,6 +52,7 @@
                             <li><a class="dropdown-item" href="/manager/category">카테고리 및 상품 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/order">주문 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
+                            <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
                         </ul>
                     </li>
                 </th:block>
