commit 86 : 로그인 실패 핸들러 구현

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,6 +28,7 @@
                             <input type="password" class="form-control" id="password" name="password" value="1234"/>
                             <button class="btn btn-outline-dark" type="button" id="show-pwd">show</button>
                         </div>
+                        <p class="error-message" style="color: red" id="pwdError"></p>
                     </div>
 
                     <div class="form-check mb-3">
@@ -176,6 +177,13 @@
         const newPasswordChk = $("#newPasswordChk")
 
         $(document).ready(function(){
+
+            const params = new URLSearchParams(location.search);
+            if (params.has("error")) {
+                const errorMessage = decodeURIComponent(params.get("error"));
+                $("#pwdError").html(errorMessage.replace("\n", "<br>"));
+                history.replaceState({}, null, '/login');
+            }
 
             const idItemKey = 'HONG_SHOP_ID'
 
