--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -53,6 +53,7 @@
                             <li><a class="dropdown-item" href="/manager/order">주문 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
+                            <li><a class="dropdown-item" href="/manager/postType">게시판 관리</a></li>
                         </ul>
                     </li>
                 </th:block>
