commit 90 : manage 폴더 -> manager 변경

--- a/src/main/resources/templates/manager/postType.html
+++ b/src/main/resources/templates/manager/postType.html
@@ -124,14 +124,15 @@
                                     <label>사용여부</label>
                                     <div class="input-group">
                                         <div class="form-check" style="margin-right: 20px;">
-                                            <input type="radio" class="form-check-input" id="new-useAt-Y" name="useAt" value="Y" checked>
+                                            <input type="radio" class="form-check-input" id="new-useAt-Y" name="useAt" value="Y">
                                             <label class="form-check-label" for="new-useAt-Y">Y</label>
                                         </div>
                                         <div class="form-check" style="margin-right: 20px;">
-                                            <input type="radio" class="form-check-input" id="new-useAt-N" name="useAt" value="N">
+                                            <input type="radio" class="form-check-input" id="new-useAt-N" name="useAt" value="N" checked>
                                             <label class="form-check-label" for="new-useAt-N">N</label>
                                         </div>
                                     </div>
+                                    <p class="error-message" style="color: red">사용여부가 'Y'인 경우, 자동으로 해당 게시판 URL이 생성됩니다.</p>
                                 </div>
 
                             </div>
