--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.min.css'}">
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.css'}">
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{'/assets/src/favicon/favicon.ico'}" />
 
     <style>
         :root {
