--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
         <div class="container-fluid">
             <div class="dropdown">
                 <button class="btn" type="button" id="mainPageBtn" onclick="location.href='/'">
-                    <img src="/assets/src/home.png" alt="Button Image" style="width:40px;" class="rounded-pill">
+                    <img src="/assets/src/header/home.png" alt="Button Image" style="width:40px;" class="rounded-pill">
                 </button>
             </div>
             <ul class="navbar-nav">
@@ -56,7 +56,7 @@
             </ul>
             <div class="dropdown">
                 <button class="btn" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/assets/src/img.png" alt="Button Image" style="width:40px;" class="rounded-pill">
+                    <img src="/assets/src/header/profile.png" alt="Button Image" style="width:40px;" class="rounded-pill">
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
@@ -87,11 +87,14 @@
                         const dom = document.getElementById("product-dropdown");
                         dom.innerHTML = ''
 
+                        body += `<li><a class="dropdown-item" href="/category/new"><i data-feather="heart" class="font-medium-2 ms-50"></i>&nbsp;최신상품</a></li>`
+
                         category.forEach((data, i) => {
                             body += `<li><a class="dropdown-item" href="/category/${data['categoryId']}">${data['categoryName']}</a></li>`
                         })
 
                         dom.innerHTML = body
+                        feather.replace()
                     }
                 },
                 error: function (xhr, status, error) {
